# Kanai

./: .eslintrc  .gitignore  .gitmodules  .postcssrc  .stylelintrc  CMakeLists.txt  Kanai.cabal  Kanai.fsproj  LICENSE  Makefile  README.md  build.gradle  elm.json  go.mod  gradle.properties  kanai.cabal  main.ts  package-lock.json  package.json  package.yaml  packages.lock.json  preload.ts  rollup.config.ts  settings.gradle  stack.yaml  tsconfig.json  webpack.config.coffee  webpack.config.js
.github/workflows/: linux.yml  macos.yml  windows.yml
api/: build.gradle
api/src/main/java/dev/shota/kanai/api/: Plugin.java
api/src/main/java/net/pryoscode/kanai/api/: Plugin.java
api/src/test/resources/: plugin.properties
app/: build.gradle
app/src/main/java/net/pryoscode/kanai/: Main.java
app/src/main/resources/styles/: Core.css  Theme.css
public/: index.html
res/plugins/: example.lua
sdk/: build.gradle
sdk/src/test/resources/: plugin.toml
setup/: setup.wxs
src/: App.svelte  font.cpp  font.h  global.d.ts  main.cpp  main.ts  plugin.cpp  plugin.h  resource.cpp  resource.h  web.cpp  web.h  window.cpp  window.h
src/main/: Main.hs  Program.fs  main.cpp  main.go  main.js  main.ts  preload.js
src/main/java/dev/shota/kanai/: Main.java
src/main/java/dev/shota/kanai/code/: Instance.java  Singleton.java  SingletonException.java
src/main/java/dev/shota/kanai/config/: Config.java
src/main/java/dev/shota/kanai/jvm/: Instance.java  Singleton.java  SingletonException.java
src/main/java/dev/shota/kanai/language/: Language.java
src/main/java/dev/shota/kanai/plugin/: Plugins.java
src/main/java/dev/shota/kanai/reflection/: Instance.java  Singleton.java  SingletonException.java
src/main/java/dev/shota/kanai/update/: Updater.java
src/main/java/dev/shota/kanai/window/: Window.java
src/main/java/net/pryoscode/kanai/: Discord.java  Main.java  Reporter.java  Updater.java
src/main/java/net/pryoscode/kanai/boilerplate/: Instance.java  Singleton.java
src/main/java/net/pryoscode/kanai/code/: Instance.java  Singleton.java  SingletonException.java
src/main/java/net/pryoscode/kanai/config/: Config.java  Setting.java
src/main/java/net/pryoscode/kanai/keyboard/: Key.java  KeyManager.java
src/main/java/net/pryoscode/kanai/lang/: Language.java  LanguageManager.java
src/main/java/net/pryoscode/kanai/language/: Language.java
src/main/java/net/pryoscode/kanai/plugin/: Plugin.java  PluginLoader.java  Plugins.java
src/main/java/net/pryoscode/kanai/utils/: CustomTab.java  FileTransferable.java  GUI.java  Loader.java  StylesheetHandlerFactory.java
src/main/java/net/pryoscode/kanai/window/: Language.java  Window.java
src/main/java/net/pryoscode/kanai/windows/: Settings.java  Window.java
src/main/resources/: language.properties  language_de.properties  license.txt  log4j2.properties
src/main/resources/associations/: text.properties
src/main/resources/img/: icon.icns
src/main/resources/langs/: language_de.properties
src/main/resources/scenes/: About.fxml  Window.fxml
src/main/resources/scenes/components/: Editor.fxml  Explorer.fxml
src/main/resources/styles/: Core.css  Theme.css  core.css  core.less  settings.less  theme.css  theme.less  window.css  window.less
src/main/resources/templates/: About.fxml  Window.fxml
src/renderer/: App.css  App.elm  App.jsx  App.tsx  Editor.coffee  Editor.elm  Editor.tsx  Files.elm  Files.tsx  Main.coffee  bridge.ts  main.coffee  main.ts
src/renderer/assets/less/: App.less  Editor.less  Files.less  Fonts.less  Syntax.less  Theme.less
src/renderer/assets/styles/: App.styl  Files.less  Main.styl  Syntax.less  Theme.less  Theme.styl  _theme.sass  app.sass  styles.sass
src/renderer/assets/views/: index.ejs  index.hbs  index.pug
src/renderer/public/: index.html
src/test/java/: CodeEditor.java
(+103 files in other folders)
