cabal-version:      2.4
name:               Kanai
version:            0.4.0
author:             PryosCode
maintainer:         info@pryoscode.net
extra-source-files:
    LICENSE
    README.md

executable Kanai
    main-is:          Main.hs
    build-depends:    base ^>=4.15.0.0
    hs-source-dirs:   src/main
    default-language: Haskell2010